completing authorization server